<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_white"
    tools:context=".ui.screenOne.ScreenOneActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="211dp"
    android:background="@color/primary_orange"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/little_big_margin_forty_eight"
        android:gravity="center"
        android:text="@string/label_welcome"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp" />
    <TextView
        android:layout_below="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_welcome_info"
        android:layout_marginTop="@dimen/little_small_margin_nine"
        android:layout_marginEnd="@dimen/small_margin_12"
        android:layout_marginStart="@dimen/small_margin_12"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/medium_size_thirty_two"
        android:layout_marginEnd="@dimen/medium_size_thirty_two"
        android:layout_marginTop="130dp"
        android:background="@android:drawable/dialog_holo_dark_frame"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="0dp"
        tools:ignore="NotSibling">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin_twenty_four"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/medium_margin_twenty_four"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/ADD_IMAGE"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <EditText
                android:id="@+id/ED_NAME"
                android:layout_width="match_parent"
                android:layout_height="@dimen/little_big_margin_forty_eight"
                android:background="@drawable/ic_bg_edit_text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="14sp"
                android:hint="@string/label_input_name"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/ED_PALINDROME"
                android:layout_width="match_parent"
                android:layout_height="@dimen/little_big_margin_forty_eight"
                android:background="@drawable/ic_bg_edit_text"
                android:layout_marginTop="@dimen/medium_margin_eighteen"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="14sp"
                android:hint="@string/label_input_palindrome"
                tools:ignore="RtlSymmetry" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_twenty_four"
            android:orientation="horizontal">
        <Button
            android:id="@+id/BTN_NEXT"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rectangle_orange"
            android:layout_marginEnd="@dimen/medium_margin_fifteen"
            android:textColor="@color/white"
            android:text="@string/label_next"/>
            <Button
                android:id="@+id/BTN_CHECK"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/bg_rectangle_orange"
                android:textColor="@color/white"
                android:text="@string/label_check"/>
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/medium_margin_twenty_four"
        android:layout_marginEnd="@dimen/medium_margin_twenty_four"
        android:layout_marginBottom="@dimen/medium_size_thirty_two"
        android:gravity="center"
        android:text="@string/label_copy_right"
        android:textSize="12sp" />
</RelativeLayout>